--- a/training/configs/config_cs.cfg
+++ b/training/configs/config_cs.cfg
@@ -60,9 +60,7 @@ maxout_pieces = 3
 depth = 4
 
 [components.spancat.suggester]
-@misc = "spacy.ngram_range_suggester.v1"
-min_size = 1
-max_size = 21
+@misc = "custom_suggester"
 
 [corpora]
 
