--- a/training/configs/config_sf.cfg
+++ b/training/configs/config_sf.cfg
@@ -45,7 +45,7 @@ maxout_pieces = 3
 
 [components.span_finder]
 factory = "experimental_span_finder"
-threshold = 0.35
+threshold = 0.3
 predicted_key = "span_candidates"
 training_key = ${vars.spans_key}
 min_length = 0
@@ -153,6 +153,12 @@ eps = 0.00000001
 learn_rate = 0.001
 
 [training.score_weights]
+span_finder_span_candidates_f=0.25
+span_finder_span_candidates_p=0
+span_finder_span_candidates_r=0.25
+spans_sc_f=0.5
+spans_sc_p=0
+spans_sc_r=0
 
 [pretraining]
 
