--- a/training/configs/transformer_config_sf.cfg
+++ b/training/configs/transformer_config_sf.cfg
@@ -6,7 +6,6 @@ init_tok2vec = null
 
 [vars]
 spans_key = null
-max_span = 203
 
 [system]
 gpu_allocator = "pytorch"
@@ -14,7 +13,7 @@ seed = 0
 
 [nlp]
 lang = "ru"
-pipeline = ["spancat"]
+pipeline = ["transformer","span_finder","spancat"]
 batch_size = 128
 disabled = []
 before_creation = null
@@ -23,6 +22,46 @@ after_pipeline_creation = null
 tokenizer = {"@tokenizers":"spacy.Tokenizer.v1"}
 
 [components]
+
+[components.transformer]
+factory = "transformer"
+
+[components.transformer.model]
+@architectures = "spacy-transformers.TransformerModel.v3"
+name = "sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2"
+tokenizer_config = {"use_fast": true}
+
+[components.transformer.model.get_spans]
+@span_getters = "spacy-transformers.strided_spans.v1"
+window = 128
+stride = 96
+
+[components.span_finder]
+factory = "experimental_span_finder"
+threshold = 0.3
+predicted_key = "span_candidates"
+training_key = ${vars.spans_key}
+min_length = 0
+max_length = 0
+
+[components.span_finder.scorer]
+@scorers = "spacy-experimental.span_finder_scorer.v1"
+predicted_key = ${components.span_finder.predicted_key}
+training_key = ${vars.spans_key}
+
+[components.span_finder.model]
+@architectures = "spacy-experimental.SpanFinder.v1"
+
+[components.span_finder.model.scorer]
+@layers = "spacy.LinearLogistic.v1"
+nO=2
+
+[components.span_finder.model.tok2vec]
+@architectures = "spacy-transformers.TransformerListener.v1"
+grad_factor = 0
+
+[components.span_finder.model.tok2vec.pooling]
+@layers = "reduce_mean.v1"
 
 [components.spancat]
 factory = "spancat"
@@ -43,26 +82,15 @@ nO = null
 nI = null
 
 [components.spancat.model.tok2vec]
-@architectures = "spacy.Tok2Vec.v1"
+@architectures = "spacy-transformers.TransformerListener.v1"
+grad_factor = 0
 
-[components.spancat.model.tok2vec.embed]
-@architectures = "spacy.MultiHashEmbed.v1"
-width = 96
-rows = [5000,2000,1000,1000]
-attrs = ["ORTH","PREFIX","SUFFIX","SHAPE"]
-include_static_vectors = false
-
-[components.spancat.model.tok2vec.encode]
-@architectures = "spacy.MaxoutWindowEncoder.v1"
-width = 96
-window_size = 1
-maxout_pieces = 3
-depth = 4
+[components.spancat.model.tok2vec.pooling]
+@layers = "reduce_mean.v1"
 
 [components.spancat.suggester]
-@misc = "spacy.ngram_range_suggester.v1"
-min_size = 1
-max_size = ${vars.max_span}
+@misc = "spacy-experimental.span_finder_suggester.v1"
+candidates_key = ${components.span_finder.predicted_key}
 
 [corpora]
 
@@ -92,20 +120,16 @@ accumulate_gradient = 1
 patience = 2000
 max_epochs = 0
 max_steps = 20000
-eval_frequency = 200
+eval_frequency = 500
 frozen_components = []
+annotating_components = ["span_finder"]
 before_to_disk = null
 
 [training.batcher]
-@batchers = "spacy.batch_by_words.v1"
-discard_oversize = false
-tolerance = 0.2
-
-[training.batcher.size]
-@schedules = "compounding.v1"
-start = 100
-stop = 1000
-compound = 1.001
+@batchers = "spacy.batch_by_padded.v1"
+discard_oversize = true
+size = 1000
+buffer = 256
 
 [training.logger]
 @loggers = "spacy.ConsoleLogger.v1"
@@ -123,9 +147,12 @@ eps = 0.00000001
 learn_rate = 0.001
 
 [training.score_weights]
-spans_sc_f = 1.0
-spans_sc_p = 0.0
-spans_sc_r = 0.0
+span_finder_span_candidates_f=0.25
+span_finder_span_candidates_p=0
+span_finder_span_candidates_r=0.25
+spans_sc_f=0.5
+spans_sc_p=0
+spans_sc_r=0
 
 [pretraining]
 
